--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:dev" : "ng serve -c development",
+    "start:dev": "ng serve -c development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngrx/store": "^13.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "webfullstack-design-system": "^0.0.9",
+    "webfullstack-design-system": "^0.0.16",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
