--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@mdi/font": "^6.7.96",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "webfullstack-design-system": "^0.0.13",
